[metadata]
name = euc
version = 0.1.2
author = Mariusz Kryński
author-email = mrk@sed.pl
home-page = https://github.com/mrk-its/euc
description = python library for Electric Unicycles
long-description = file: README.md
license = MIT
license-file = LICENSE
platform = any
keywords = euc, dbussy
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.5.*
test_suite = tests
setup_requires = setuptools

packages =
  euc.base
  euc.device
  euc.cli

install_requires =
  dbussy~=1.2.1

tests_require =
  pytest

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
  black
  flake8
tests =
